2003-04-14  Naba Kumar  <naba@gnome.org>

	* anjuta.glade, anjuta_dialogs_strings.c: Updated setup dialog.

2003-04-14  Johannes Schmid <clubfan@users.sourceforge.net>
	
	Reviewed by Naba Kumar  <naba@gnome.org>
	
	* src/message-manager.[c/h], src/message-manager-private[c/h],
		anjuta.[c/h]: Ported message-manager to Gtk2
	
	* plugins/patch/patch-plugin.c, src/anjuta-tools.c,
	src/anjuta_cbs.c, src/build_file.c, src/build_project.c,
	src/clean_project.c, src/compile.c, src/configurer.c,
	src/controls.c, src/cvs.c, src/debugger.c,
	src/find_in_files.c, src/gnome_project.c, src/mainmenu_callbacks.c,
	src/project_import.c, src/search-replace.c: Changed name from
	AnjutaMessageManager to	AnMessageManager to avoid too long type
	and funtion names.

2003-04-11  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>
	* src/launcher.c: Fix build won't stop problem - TTimo
	* TODO: Updated
	* pixmaps/anjuta_splash.c: New splash screen prototype.
	* src/anjuta-tools.c, src/anjuta.[ch], : Forward port from branch.
	* src/compiler_options.c: Mute pkgconfig errors.
	* src/project_config.c. widgets/gnomefilelist.c: Fix leak.

2003-04-10  Naba Kumar  <naba@gnome.org>

	* configurer.[c,h]: Fixed dialog to close properly.
	* src/project_dbase.c, widgets/gnomefilelist.c: Added
	debugging asserts.
	
2003-04-09  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>
	* anjuta.prj: Removed unnecessary files, load with 1.2.0
	* plugins/class-gen/Makefile.am, plugins/patch/Makefile.am,
	plugins/sample1/Makefile.am, src/an_file_view.c, src/anjuta.c,
	src/anjuta.h, src/project_dbase.c: Use default GNOME icons.
	* gdl/*, widgets/*, Makefile.am, configure.in, plugins/*/Makefile.am,
	src/makefile.am: Move gdl to it's own directory.
	* global-tags/create_global_tags.sh: Silently ignore SDL error.

2003-04-09  Naba Kumar  <naba@gnome.org>

	* anjuta.glade: Synced search and replace dialog from the ANJUTA_1_0_0
	branch.
